# bayes_nn

./: .gitignore  README.md  pyproject.toml  setup.cfg
bayes_nn/: __init__.py  gaussian_process.py  gp_dataset.py  training.py
bayes_nn/datasets/: __init__.py  gp_dataset.py
bayes_nn/experiment/: __init__.py  training.py
bayes_nn/models/: __init__.py  base_model.py  bayes_mlp.py
src/: gp_example.py  train.py
tests/: test_gaussian_process.py  test_gp_dataset.py  test_training.py
tests/datasets/: test_gp_dataset.py
tests/experiment/: test_training.py
tests/models/: test_bayes_mlp.py  test_gaussian_process.py
