[tool.poetry]
name = "myapp"
version = "0.0.1"
description = ""
authors = ["Ryosuke Nagumo <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
exclude = 'conftest.py|.venv'

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
